maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: not found: value getLargeur
		if(x < getLargeur() && y < getMondeHauteur()) {
                       ^